# expert_method

./: CMakeLists.txt  input.txt
app/: expert_method.cpp
include/expert_method/analyzation/: AnalysingCoeffsResolver.hpp
include/expert_method/competence/: CompetenceResolver.hpp
include/expert_method/weights/: WeightsService.hpp  WeightsStorage.hpp
include/lab_logic/: LabLogic.hpp
include/mathematic/exceptions/: MathVectorSize.hpp  MatrixSize.hpp
include/mathematic/service/: MathVectorService.hpp  MatrixService.hpp
include/mathematic/structures/: MathVector.hpp  Matrix.hpp
src/: CMakeLists.txt
src/expert_method/: AnalysingCoeffsResolver.cpp  CMakeLists.txt  CompetenceResolver.cpp  WeightsService.cpp  WeightsStorage.cpp
src/lab_logic/: CMakeLists.txt  LabLogic.cpp
src/mathematic/: CMakeLists.txt  MathVector.cpp  MathVectorService.cpp  MathVectorSize.cpp  Matrix.cpp  MatrixService.cpp  MatrixSize.cpp
